--- a/css/contact.scss
+++ b/css/contact.scss
@@ -26,6 +26,7 @@ main .main__contact {
         padding: 10px 0;
         font-size: 1em;
         cursor: pointer;
+        outline: none;
 
     }
 
