--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ a {
   outline: none; }
 
 /* .container{
-	display: flex;
-	justify-content: center;
+    display: flex;
+    justify-content: center;
 }
  */
 .mob-menu {
@@ -232,7 +232,8 @@ footer {
     background-color: transparent;
     font-size: 1.5em;
     color: #329470;
-    margin-top: 5%; }
+    margin-top: 5%;
+    outline: none; }
     footer .footer__button:hover {
       opacity: 0.8; }
   footer .footer__mob-envelope {
@@ -298,7 +299,8 @@ footer {
       width: 100%;
       padding: 10px 0;
       font-size: 1em;
-      cursor: pointer; }
+      cursor: pointer;
+      outline: none; }
 
 .about-me,
 .skills__html,
