--- a/css/media.scss
+++ b/css/media.scss
@@ -84,6 +84,10 @@ $blue:#266089;
         .skills,
         .my-works {
             display: flex;
+            a{
+            	display: flex;
+            	flex-direction: row;
+            }
 
         }
 
