--- a/css/media.css
+++ b/css/media.css
@@ -68,7 +68,7 @@
     width: 100px;
     height: 100px;
     margin-bottom: 32px;
-    background: url(../img/logo-mob.svg);
+    background: url(../img/logo-mob.png);
     background-size: contain; }
   main .main__container {
     display: none; }
