--- a/css/media.scss
+++ b/css/media.scss
@@ -101,7 +101,7 @@ $blue:#266089;
             width: 100px;
             height: 100px;
             margin-bottom: 32px;
-            background: url(../img/logo-mob.svg);
+            background: url(../img/logo-mob.png);
             background-size: contain;
         }
 
