--- a/css/skills.css
+++ b/css/skills.css
@@ -8,17 +8,19 @@ main .skills {
     display: flex;
     flex-direction: column;
     justify-content: spase-between;
-        /* div{
-		margin:0;
-		padding: 5% 0;
-	} */ }
+    /* div{
+    margin:0;
+    padding: 5% 0;
+} */ }
     main .skills .main__container .mySlides {
       display: none;
       flex-direction: column;
       align-items: center;
       /* Number text (1/3 etc) */ }
-      main .skills .main__container .mySlides .main__logo, main .skills .main__container .mySlides .main__text {
-        margin: 5% 0; }
+      main .skills .main__container .mySlides .main__logo,
+      main .skills .main__container .mySlides .main__text {
+        margin: 5% 0;
+        text-align: center; }
       main .skills .main__container .mySlides .numbertext {
         color: #266089;
         font-weight: bold; }
