--- a/css/skills.scss
+++ b/css/skills.scss
@@ -22,8 +22,11 @@ main .skills {
             display: none;
             flex-direction: column;
             align-items: center;
-            .main__logo, .main__text{
-            	margin: 5% 0;
+
+            .main__logo,
+            .main__text {
+                margin: 5% 0;
+                text-align: center;
 
             }
 
@@ -37,9 +40,9 @@ main .skills {
         }
 
         /* div{
-		margin:0;
-		padding: 5% 0;
-	} */
+        margin:0;
+        padding: 5% 0;
+    } */
     }
 }
 
