--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 $lblue:#C6D1D7;
 $blue:#266089;
 $green:#329470;
-$font: 'Rhodium Libre',
+$font: 'Rhodium Libre', 'Comfortaa',
 serif;
 
 /* 100px=7% */
@@ -105,6 +105,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    
 
     .header__burger {
         display: none;
@@ -140,7 +141,7 @@ header {
     }
 
     .header__logo {
-        background: url(../img/logo.svg);
+        background: url(../img/logo.png);
         background-size: cover;
         width: 120px;
         height: 120px;
@@ -166,13 +167,19 @@ header {
         display: inline-block;
     }
 
-    li:nth-child(odd) {
-        cursor: pointer;
+    li{
+        
         user-select: none;
-
-        &:hover {
-            color: darken($blue, 7%)
+       
+        
+        a:visited{
+            color: $blue;
         }
+        a {
+            color: darken($blue, 7%)!important
+
+        }
+
     }
 
 }
@@ -190,6 +197,10 @@ header {
 main {
     max-width: 1240px;
     margin: 0 7%;
+
+    a{
+        cursor: default;
+    }
 
     .main__mob {
         display: none;
