--- a/css/style.scss
+++ b/css/style.scss
@@ -227,15 +227,15 @@ main {
 
     .main__logo {
         width: 100px;
-        height: 100px;
+        height: 200px;
         margin: 32px 32px 32px 140px;
     }
 
     .about__ava {
 
-        background: url(../img/user.png) no-repeat;
+        background: url(../img/ava.png) no-repeat;
         background-size: contain;
-        width: 300px;
+        width: 450px;
 
 
     }
